--- a/event_camera/scripts/camera.ipynb
+++ b/event_camera/scripts/camera.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Event Camera Simulator**"
+    "# Event Camera Simulator\n",
+    "\n",
+    "This script allows to convert a RGB video from a traditional camera to an event video. It also has an option to convert an event video to an events list. It is also possible to convert an event list to an event video."
    ]
   },
   {
@@ -13,75 +15,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "import cv2\n",
     "import numpy as np\n",
-    "import simulator_utils as camera"
+    "import simulator_utils as camera\n",
+    "sys.path.insert(0, '/Users/omkarpatil/Documents/event_based_visual_microphone/event_camera/')\n",
+    "import utility_spectrogram as us\n",
+    "import video_frames as vf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:red\"> Provide the RGB video file path bellow: </span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Video saved at moving_square.mp4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from skimage import data\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "image1 = data.astronaut()\n",
-    "image2 = np.clip(image1 + np.random.normal(3, 10, image1.shape), 0, 255).astype(np.uint8)\n",
-    "image3 = np.clip(image2 + np.random.normal(3, 10, image2.shape), 0, 255).astype(np.uint8)\n",
-    "image4 = np.clip(image3 - np.random.normal(3, 10, image3.shape), 0, 255).astype(np.uint8)\n",
-    "image5 = np.clip(image4 - np.random.normal(3, 10, image4.shape), 0, 255).astype(np.uint8)\n",
-    "images = np.array([image1, image2, image3, image4, image5])\n",
-    "\n",
-    "\n",
-    "def create_moving_square_video(direction, video_path, duration=3, fps=30, square_size=200):\n",
-    "    # Video parameters\n",
-    "    width, height = 640, 480\n",
-    "    total_frames = duration * fps\n",
-    "    # Create a VideoWriter object\n",
-    "    fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
-    "    out = cv2.VideoWriter(video_path, fourcc, fps, (width, height))\n",
-    "    frames = []\n",
-    "    # Create frames with a moving square\n",
-    "    for frame_idx in range(total_frames):\n",
-    "        # Create a black background\n",
-    "        frame = np.zeros((height, width, 3), dtype=np.uint8)\n",
-    "        # Calculate the position of the square\n",
-    "        if direction == 0:\n",
-    "            x_pos = int((frame_idx / total_frames) * (width - square_size))\n",
-    "            y_pos = (height - square_size) // 2\n",
-    "        elif direction == 1:\n",
-    "            x_pos = (width - square_size) - int((frame_idx / total_frames) * (width - square_size))\n",
-    "            y_pos = (height - square_size) // 2\n",
-    "        elif direction == 2:\n",
-    "            y_pos = int((frame_idx / total_frames) * (height - square_size))\n",
-    "            x_pos = (width - square_size) // 2\n",
-    "        else:\n",
-    "            y_pos = (height - square_size) - int((frame_idx / total_frames) * (height - square_size))\n",
-    "            x_pos = (width - square_size) // 2\n",
-    "        # Draw the square\n",
-    "        frame[y_pos:y_pos + square_size, x_pos:x_pos + square_size] = (255, 255, 255)\n",
-    "        # Write the frame to the video\n",
-    "        frames.append(frame)\n",
-    "        out.write(frame)\n",
-    "    # Release the VideoWriter object\n",
-    "    out.release()\n",
-    "    return frames\n",
-    "\n",
-    "# Path to save the video\n",
-    "video_path = 'moving_square.mp4'\n",
-    "# Create the video\n",
-    "frames = create_moving_square_video(3, video_path)\n",
-    "print(f\"Video saved at {video_path}\")"
+    "file_path = '/Volumes/Omkar 5T/video_dataset/chips1.avi'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code extracts the video frames using a utiltiy function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frames = vf.extract_frames(file_path)"
    ]
   },
   {
