--- a/utilities/scripts/avi_to_mp4.ipynb
+++ b/utilities/scripts/avi_to_mp4.ipynb
@@ -31,8 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_video = '/Volumes/Omkar 5T/video_dataset/plants.avi' \n",
-    "output_video = '/Volumes/Omkar 5T/video_dataset/plants.mp4'  "
+    "source_video = '/Volumes/Omkar 5T/dataset/video_dataset/chips1.avi'\n",
+    "output_video = '/Volumes/Omkar 5T/dataset/video_dataset/chips1.mp4'"
    ]
   },
   {
@@ -44,9 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted frame number: 5000\n",
+      "Converted frame number: 10000\n",
+      "Converted frame number: 15000\n",
+      "Converted frame number: 20000\n",
+      "Converted frame number: 25000\n",
+      "Converted frame number: 30000\n",
+      "Converted frame number: 35000\n",
+      "Video conversion completed!\n"
+     ]
+    }
+   ],
    "source": [
     "cap = cv2.VideoCapture(source_video)\n",
     "\n",
