--- a/utilities/scripts/video_window.ipynb
+++ b/utilities/scripts/video_window.ipynb
@@ -39,10 +39,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w_point = 0\n",
-    "h_point = 0\n",
-    "window_dim = [176, 200]\n",
-    "video_path = '/Volumes/Omkar 5T/dataset/event_video_dataset/plants.mp4'\n",
+    "w_point = 359\n",
+    "h_point = 307\n",
+    "window_dim = [30, 30]\n",
+    "video_path = '/Volumes/Omkar 5T/dataset/video_dataset/plants.mp4'\n",
     "save_path = '/Volumes/Omkar 5T/dataset/window_dataset/plants_0.mp4'"
    ]
   },
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracted 38971 frames and saved to '/Volumes/Omkar 5T/dataset/window_dataset/plants_0.mp4'\n"
+      "Extracted 38986 frames and saved to '/Volumes/Omkar 5T/dataset/window_dataset/plants_0.mp4'\n"
      ]
     }
    ],
@@ -67,70 +67,56 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracted 38971 frames and saved to '/Volumes/Omkar 5T/dataset/window_dataset/plants_1.mp4'\n",
-      "Extracted 38971 frames and saved to '/Volumes/Omkar 5T/dataset/window_dataset/plants_2.mp4'\n",
-      "Extracted 38971 frames and saved to '/Volumes/Omkar 5T/dataset/window_dataset/plants_3.mp4'\n",
-      "Extracted 38971 frames and saved to '/Volumes/Omkar 5T/dataset/window_dataset/plants_4.mp4'\n",
-      "Extracted 38971 frames and saved to '/Volumes/Omkar 5T/dataset/window_dataset/plants_5.mp4'\n",
-      "Extracted 38971 frames and saved to '/Volumes/Omkar 5T/dataset/window_dataset/plants_6.mp4'\n",
-      "Extracted 38971 frames and saved to '/Volumes/Omkar 5T/dataset/window_dataset/plants_7.mp4'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "w_point = 176\n",
-    "h_point = 0\n",
-    "window_dim = [176, 200]\n",
-    "video_path = '/Volumes/Omkar 5T/dataset/event_video_dataset/plants.mp4'\n",
-    "save_path = '/Volumes/Omkar 5T/dataset/window_dataset/plants_1.mp4'\n",
-    "vf.video_window(video_path, save_path, w_point, h_point, window_dim)\n",
+    "# w_point = 373\n",
+    "# h_point = 252\n",
+    "# window_dim = [30, 30]\n",
+    "# video_path = '/Volumes/Omkar 5T/dataset/video_dataset/plants.mp4'\n",
+    "# save_path = '/Volumes/Omkar 5T/dataset/window_dataset/plants_1.mp4'\n",
+    "# vf.video_window(video_path, save_path, w_point, h_point, window_dim)\n",
     "\n",
-    "w_point = 352\n",
-    "h_point = 0\n",
-    "window_dim = [176, 200]\n",
-    "video_path = '/Volumes/Omkar 5T/dataset/event_video_dataset/plants.mp4'\n",
-    "save_path = '/Volumes/Omkar 5T/dataset/window_dataset/plants_2.mp4'\n",
-    "vf.video_window(video_path, save_path, w_point, h_point, window_dim)\n",
+    "# w_point = 71\n",
+    "# h_point = 345\n",
+    "# window_dim = [30, 30]\n",
+    "# video_path = '/Volumes/Omkar 5T/dataset/video_dataset/plants.mp4'\n",
+    "# save_path = '/Volumes/Omkar 5T/dataset/window_dataset/plants_2.mp4'\n",
+    "# vf.video_window(video_path, save_path, w_point, h_point, window_dim)\n",
     "\n",
-    "w_point = 528\n",
-    "h_point = 0\n",
-    "window_dim = [176, 200]\n",
-    "video_path = '/Volumes/Omkar 5T/dataset/event_video_dataset/plants.mp4'\n",
-    "save_path = '/Volumes/Omkar 5T/dataset/window_dataset/plants_3.mp4'\n",
-    "vf.video_window(video_path, save_path, w_point, h_point, window_dim)\n",
+    "# w_point = 64\n",
+    "# h_point = 150\n",
+    "# window_dim = [30, 30]\n",
+    "# video_path = '/Volumes/Omkar 5T/dataset/video_dataset/plants.mp4'\n",
+    "# save_path = '/Volumes/Omkar 5T/dataset/window_dataset/plants_3.mp4'\n",
+    "# vf.video_window(video_path, save_path, w_point, h_point, window_dim)\n",
     "\n",
-    "w_point = 0\n",
-    "h_point = 200\n",
-    "window_dim = [176, 200]\n",
-    "video_path = '/Volumes/Omkar 5T/dataset/event_video_dataset/plants.mp4'\n",
-    "save_path = '/Volumes/Omkar 5T/dataset/window_dataset/plants_4.mp4'\n",
-    "vf.video_window(video_path, save_path, w_point, h_point, window_dim)\n",
+    "# w_point = 0\n",
+    "# h_point = 200\n",
+    "# window_dim = [176, 200]\n",
+    "# video_path = '/Volumes/Omkar 5T/dataset/event_video_dataset/plants.mp4'\n",
+    "# save_path = '/Volumes/Omkar 5T/dataset/window_dataset/plants_4.mp4'\n",
+    "# vf.video_window(video_path, save_path, w_point, h_point, window_dim)\n",
     "\n",
-    "w_point = 176\n",
-    "h_point = 200\n",
-    "window_dim = [176, 200]\n",
-    "video_path = '/Volumes/Omkar 5T/dataset/event_video_dataset/plants.mp4'\n",
-    "save_path = '/Volumes/Omkar 5T/dataset/window_dataset/plants_5.mp4'\n",
-    "vf.video_window(video_path, save_path, w_point, h_point, window_dim)\n",
+    "# w_point = 176\n",
+    "# h_point = 200\n",
+    "# window_dim = [176, 200]\n",
+    "# video_path = '/Volumes/Omkar 5T/dataset/event_video_dataset/plants.mp4'\n",
+    "# save_path = '/Volumes/Omkar 5T/dataset/window_dataset/plants_5.mp4'\n",
+    "# vf.video_window(video_path, save_path, w_point, h_point, window_dim)\n",
     "\n",
-    "w_point = 352\n",
-    "h_point = 200\n",
-    "window_dim = [176, 200]\n",
-    "video_path = '/Volumes/Omkar 5T/dataset/event_video_dataset/plants.mp4'\n",
-    "save_path = '/Volumes/Omkar 5T/dataset/window_dataset/plants_6.mp4'\n",
-    "vf.video_window(video_path, save_path, w_point, h_point, window_dim)\n",
+    "# w_point = 352\n",
+    "# h_point = 200\n",
+    "# window_dim = [176, 200]\n",
+    "# video_path = '/Volumes/Omkar 5T/dataset/event_video_dataset/plants.mp4'\n",
+    "# save_path = '/Volumes/Omkar 5T/dataset/window_dataset/plants_6.mp4'\n",
+    "# vf.video_window(video_path, save_path, w_point, h_point, window_dim)\n",
     "\n",
-    "w_point = 528\n",
-    "h_point = 200\n",
-    "window_dim = [176, 200]\n",
-    "video_path = '/Volumes/Omkar 5T/dataset/event_video_dataset/plants.mp4'\n",
-    "save_path = '/Volumes/Omkar 5T/dataset/window_dataset/plants_7.mp4'\n",
-    "vf.video_window(video_path, save_path, w_point, h_point, window_dim)"
+    "# w_point = 528\n",
+    "# h_point = 200\n",
+    "# window_dim = [176, 200]\n",
+    "# video_path = '/Volumes/Omkar 5T/dataset/event_video_dataset/plants.mp4'\n",
+    "# save_path = '/Volumes/Omkar 5T/dataset/window_dataset/plants_7.mp4'\n",
+    "# vf.video_window(video_path, save_path, w_point, h_point, window_dim)"
    ]
   }
  ],
